--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,30 +1,30 @@
 @font-face {
     font-family: 'Cinzel';
-    src: url('./static/fonts/Cinzel-Black.ttf') format('truetype');
+    src: url('../fonts/Cinzel-Black.ttf') format('truetype');
     font-weight: 900;
 }
 
 @font-face {
     font-family: 'RobotoCond';
-    src: url('./static/fonts/RobotoCondensed-Light.ttf') format('truetype');
+    src: url('../fonts/RobotoCondensed-Light.ttf') format('truetype');
     font-weight: 400;
 }
 
 @font-face {
     font-family: 'RobotoCond';
-    src: url('./static/fonts/RobotoCondensed-Medium.ttf') format('truetype');
+    src: url('../fonts/RobotoCondensed-Medium.ttf') format('truetype');
     font-weight: 700;
 }
 
 @font-face {
     font-family: 'BebasNeue';
-    src: url('./static/fonts/BebasNeue-Regular.ttf') format('truetype');
+    src: url('../fonts/BebasNeue-Regular.ttf') format('truetype');
     font-weight: 400;
 }
 
 @font-face {
     font-family: 'Markazi';
-    src: url('./static/fonts/MarkaziText-Bold.ttf') format('truetype');
+    src: url('../fonts/MarkaziText-Bold.ttf') format('truetype');
     font-weight: 400;
 }
 
